--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <h2 class="nav-title
-            ">Mary</h2>
+            ">Ma<span class="text-primary">r</span>y</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blogs</li>
