--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 <body>
     <header>
         <nav>
-            <h2 class="nav-title
-            ">Ma<span class="text-primary">r</span>y</h2>
+            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blogs</li>
-                <li>Hire</li>
+                <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
     </header>
