--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
-                websites that provide real value to the end user. Thousands of clients have pFrocured exceptional resulfs
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have pFrocured exceptional
+                resulfs
                 while working with me. Delivering work within time and budget which meets clients requirements in our
                 mata.</p>
 
-                <div class="about-info-container">
+            <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
                     <p class="info-description">Mary Hardy</p>
@@ -65,6 +67,45 @@
                     <p class="info-description">Chattogram, BD</p>
                 </div>
             </div>
+        </section>
+        <section class="what-i-do">
+            <h3 class="section-title">what I Do</h3>
+            <p class="experience">I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio. </p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="../Developer-Portfolio/images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+                        excepturi accusamus aut, asperiores ex error.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Maxime aut, ratione at aperiam, dolores quae commodi enim ipsam vero,
+                        quibusdam expedita laborum? Iure.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.Js</p>
+                    <p class="skill-description">Quod accusamus similique soluta fuga, deserunt, quam ea quo tenetur
+                        obcaecati a porro fugit adipisci!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Modi, quaerat atque dignissimos ducimus animi eos soluta, eum totam
+                        maxime quia, aut velit distinctio!</p>
+                </div>
+            </div>
+
+
+        </section>
+        <section>
+            <section class="resume"></section>
+            <h3 class="resume-title">A summery of My resume</h3>
+
         </section>
     </main>
     <footer>
