--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         </section>
         <section class="what-i-do">
             <h3 class="section-title">what I Do</h3>
-            <p class="experience">I have more than 10 years experience building software for clients all over the world. Below is a quick
+            <p class="experience">I have more than 10 years experience building software for clients all over the world.
+                Below is a quick
                 overview of my main technical skill sets and technologies i use. Want to find out more about my
                 experience? Check out my online resume and project portfolio. </p>
             <div class="skill-container">
@@ -102,10 +103,116 @@
 
 
         </section>
-        <section>
-            <section class="resume"></section>
-            <h3 class="resume-title">A summery of My resume</h3>
 
+        <section class="resume">
+            <h3 class="resume-title1">A summery of My resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+
+
+
+
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+
+
+
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+
+
+            </div>
+        </section>
+        <!-- contract section -->
+        <section class="contact">
+        <div>
+            <h3 class="section-title">Let's Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through Friday.</p>
+            <a href="">
+                <img src="../Developer-Portfolio/images/icons/facebook.png" alt="">
+                
+            </a>
+            <a href="">
+                <img src="../Developer-Portfolio/images/icons/twitter.png" alt="">
+            </a>
+            <a href="">
+                <img src="../Developer-Portfolio/images/icons/insta.png" alt="">
+            </a>
+
+        </div>
+        <div>
+
+            <h3 class="section-title">Let's Connect</h3>
+
+
+        </div>
+        
         </section>
     </main>
     <footer>
