--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
             </div>
-            <img src="../Developer-Portfolio/images/hardy.png" alt="Hardy">
+            <img src="images/hardy.png" alt="Hardy">
 
         </div>
     </header>
@@ -76,7 +76,7 @@
                 experience? Check out my online resume and project portfolio. </p>
             <div class="skill-container">
                 <div class="skill">
-                    <img src="../Developer-Portfolio/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
                     <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
                         excepturi accusamus aut, asperiores ex error.</p>
